<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wonka.FavoritesListActivity">
    <item
        android:id="@+id/action_shop"
        android:orderInCategory="100"
        android:title="@string/shop_chocolate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cart"
        android:orderInCategory="100"
        android:title="@string/view_cart"
        android:icon="@drawable/cart_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_customize"
        android:orderInCategory="100"
        android:title="@string/customize_chocolate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scanTicket"
        android:orderInCategory="100"
        android:title="@string/scan_golden_ticket"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/view_profile"
        app:showAsAction="never" />

    
</menu>