<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:background="@drawable/purpleblack"
    tools:context=".LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/topImage"
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/river"
        app:shapeAppearanceOverlay="@style/BottomRoundedImageShape" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittext1"
                android:drawableLeft="@drawable/user_icon"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:textColorHint="@android:color/darker_gray"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext1"
                android:drawableLeft="@drawable/lock_icon"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/gradient1"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/signupRedirect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="goToSignUp"
        android:clickable="true"
        android:text="@string/not_registered_yet_sign_up_now"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>