<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purpleblack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/topImage"
            android:layout_width="match_parent"
            android:layout_height="272dp"
            android:scaleType="centerCrop"
            android:src="@drawable/river"
            app:shapeAppearanceOverlay="@style/BottomRoundedImageShape" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Welcome to Wonka's Factory!"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edittext1"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edittext1"
                    android:drawableLeft="@drawable/user_icon"
                    android:drawablePadding="8dp"
                    android:hint="@string/username"
                    android:textColorHint="@android:color/darker_gray"
                    android:padding="10dp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edittext1"
                    android:drawableLeft="@drawable/lock_icon"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edittext1"
                    android:drawableLeft="@drawable/confirmpass_icon"
                    android:drawablePadding="8dp"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edittext1"
                    android:drawableLeft="@drawable/phone_icon"
                    android:drawablePadding="8dp"
                    android:hint="@string/phone_number"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="#000000" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/gradient1"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/loginRedirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToLogin"
            android:clickable="true"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </LinearLayout>
</ScrollView>
