<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/productview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="15dp"
    android:background="@drawable/lightpurplebg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="341dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/pfp_bg" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/productName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chocolate_name"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/_4_00"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/minusBtn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@android:color/transparent"
                    app:cornerRadius="0dp"
                    app:srcCompat="@drawable/minus_icon" />

                <TextView
                    android:id="@+id/quantityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/_1"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/plusBtn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@android:color/transparent"
                    app:cornerRadius="0dp"
                    app:srcCompat="@drawable/plus_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/favoriteBtn"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/star_icon_border" />

                <TextView
                    android:id="@+id/addToFavoritesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_favorites"
                    android:textColor="@color/purple"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/list_of_ingredients"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ingredientsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="3dp"
                android:textColor="#000000"
                android:textSize="15sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addToCartButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/gradient1"
                android:drawableLeft="@drawable/shopping_cart_icon"
                android:text="@string/add_to_cart"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@color/purple" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
